<resources>
    <string name="API_URL">https://mysterious-inlet-23105.herokuapp.com/api/v1</string>

    public static final String DICTIONARY_PREF = "dictionary_pref";
    <string name="DICTIONARY_PREF">DICTIONARY_PREF</string>
    <string name="EN_TO_FIN_KEY">EN_TO_FIN</string>
    <string name="FIN_TO_EN_KEY">FIN_TO_EN</string>
    <string name="btn_submit">Submit</string>

    <string name="app_name">TranslatorSkeleton</string>
    <string name="select_quiz">Select type to start</string>
    <string name="quiz_length">Quiz Length</string>
    <string name="quiz_type_text">Quiz Type</string>
    <string name="quiz_type_random">Random</string>
    <string name="quiz_type_hard">Hard</string>

    <string name="default_timeout">TimeOut</string>


    <string name="setting_pref_key">SETTING_KEY_PREF</string>
    <string name="setting_key">SETTING</string>
    <string-array name="Planets">

    </string-array>
</resources>
